syntax = "proto3";

package infrastructure.rpc.metadata.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/metadata/infrastructure/rpc/metadata/v1";

import "domain/metadata/v1/meta.proto";

service MetadataService {
  rpc Get(MetadataServiceGetRequest) returns(MetadataServiceGetResponse) {}
  rpc Set(MetadataServiceSetRequest) returns(MetadataServiceSetResponse) {}
}

message MetadataServiceGetRequest {
  string url = 1;
}

message MetadataServiceGetResponse {
  domain.metadata.v1.Meta meta = 1;
}

message MetadataServiceSetRequest {
  string url = 1;
}

message MetadataServiceSetResponse {
  domain.metadata.v1.Meta meta = 1;
}
