syntax = "proto3";

package metadata_rpc;

option go_package = "github.com/batazor/shortlink/internal/metadata/infrastructure/metadata_rpc";

import "meta.proto";

service Metadata {
  rpc Get(GetMetaRequest) returns(GetMetaResponse) {}
  rpc Set(SetMetaRequest) returns(SetMetaResponse) {}
}

message GetMetaRequest {
  string Id = 1;
}

message GetMetaResponse {
  metadata_domain.Meta meta = 1;
}

message SetMetaRequest {
  string Id = 1;
}

message SetMetaResponse {
  metadata_domain.Meta meta = 1;
}
